# ooS

./: app.py  dashboard2.html  database.db  pyproject.toml  requirements.txt  reset_password.html  routes.py  signup.html
src/: README.md  create_database.py  routes.py
src/static/: style.css
templates/: login.html
