[tool.poetry]
name = "3-10"
version = "0.1.0"
description = "New aws project"
authors = ["arnavpatil455@gmail.com"]
license = "1.34"
readme = "README.md"
packages = [{include = "3"}]

[tool.poetry.dependencies]
python = "^3.10"
skip32 = "^1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
